FreeBSD Foundation.

This file contains major changes to ports and the ports infrastructure.
Intended audience are ports committers, maintainers and other
developers. User oriented changes should be submitted for inclusion
in the release notes and/or placed into UPDATING.

All ports committers are allowed to commit to this file.

20230722:
AUTHOR: tcberner@FreeBSD.org

  A new uses 'pycryptography' has been added to transparently depend on the
  proper variant of 'rust' or 'legacy' depending on the default version set
  by the user.

  Supported arguments: <none>,build,run
  Passing no arguments (<none>) is equivalent to passing both build and run.

  Usage:
	USES=pycryptography:build
		-> adds a BUILD_DEPENDS only
	USES=pycryptography:run
		-> adds a RUN_DEPENDS only
	USES=pycryptography:test
		-> adds a TEST_DEPENDS only
	USES=pycryptography:build,run   or   USES=pycryptography
		-> adds a BUILD_ and RUN_DEPENDS

20230712:
AUTHOR: zirias@FreeBSD.org

  USE_GITLAB has been changed to allow fetching by tag name. This was done by
  removing the GL_COMMIT variable and introducing GL_TAGNAME instead.

  Similar to USE_GITHUB/GH_TAGNAME, you can still use a commit hash with
  GL_TAGNAME (the full 40-character hash is required for that). If not
  specified, GL_TAGNAME defaults to DISTVERSIONFULL.

  Note fetching by tag name might not work on gitlab installations running
  very old versions; in that case, you must still specify a commit hash.

  For now, GL_COMMIT is still recognized but deprecated, using it will issue
  a warning in developer mode.

20230712:
AUTHOR: 0mp@FreeBSD.org

  Two new targets are now available: fetch-url-recursive-list
  and fetch-urlall-recursive-list. They are the recursive variants
  of the well-established targets fetch-url-list and fetch-urlall-list,
  which allow for listing the complete URLs of DISTFILES and PATCHFILES
  of a port. The recursive variants add the URLs of the port's dependencies
  to the output.

20230430: