@@ -18,9 +18,9 @@ _INCLUDE_BSD_DEFAULT_VERSIONS_MK=	yes
 LOCALBASE?=	/usr/local
 
 .  for lang in APACHE BDB COROSYNC EMACS FIREBIRD FORTRAN FPC GCC \
-	GHOSTSCRIPT GL GO IMAGEMAGICK JAVA LAZARUS LIBRSVG2 LINUX LLVM \
-	LUA LUAJIT MONO MYSQL NINJA NODEJS OPENLDAP PERL5 PGSQL PHP PYTHON \
-	PYTHON2 PYTHON3 PYCRYPTOGRAPHY RUBY RUST SAMBA SSL TCLTK VARNISH
+	GHOSTSCRIPT GL GO GUILE IMAGEMAGICK JAVA LAZARUS LIBRSVG2 LINUX LLVM \
+	LUA LUAJIT MONO MYSQL NINJA NODEJS OPENLDAP PERL5 PGSQL PHP \
+	PYCRYPTOGRAPHY PYTHON PYTHON2 PYTHON3 RUBY RUST SAMBA SSL TCLTK VARNISH
 .    if defined(${lang}_DEFAULT)
 ERROR+=	"The variable ${lang}_DEFAULT is set and it should only be defined through DEFAULT_VERSIONS+=${lang:tl}=${${lang}_DEFAULT} in /etc/make.conf"
 .    endif
@@ -59,6 +59,8 @@ GHOSTSCRIPT_DEFAULT?=	agpl
 GL_DEFAULT?=		mesa-libs
 # Possible values: 1.18, 1.19, 1.20, 1.21-devel
 GO_DEFAULT?=		1.20
+# Possible values: 1.8, 2.2, 3.0
+GUILE_DEFAULT?=		2.2
 # Possible versions: 6, 7
 # Possible flavors:  x11, nox11
 #                    (defaults to x11 when not specified)
@@ -104,7 +106,7 @@ OPENLDAP_DEFAULT?=	26
 # Possible values: 5.32, 5.34, 5.36, 5.38, devel
 .  if !exists(${LOCALBASE}/bin/perl) || (!defined(_PORTS_ENV_CHECK) && \
     defined(PACKAGE_BUILDING))
-PERL5_DEFAULT?=		5.32
+PERL5_DEFAULT?=		5.34
 .  elif !defined(PERL5_DEFAULT)
 # There's no need to replace development versions, like "5.23" with "devel"
 # because 1) nobody is supposed to use it outside of poudriere, and 2) it must
@@ -120,18 +122,18 @@ PERL5_DEFAULT:=		${_PERL5_FROM_BIN:R}
 PGSQL_DEFAULT?=		13
 # Possible values: 8.0, 8.1, 8.2, 8.3
 PHP_DEFAULT?=		8.1
-# Possible values: 2.7, 3.8, 3.9, 3.10, 3.11
-PYTHON_DEFAULT?=	3.9
-# Possible values: 2.7
-PYTHON2_DEFAULT?=	2.7
-# Possible values: 3.8, 3.9, 3.10, 3.11
-PYTHON3_DEFAULT?=	3.9
 # Possible values: rust, legacy
 .  if empty(ARCH:Naarch64:Namd64:Narmv7:Ni386:Npowerpc64:Npowerpc64le:Npowerpc:Nriscv64)
 PYCRYPTOGRAPHY_DEFAULT?=	rust
 .  else
 PYCRYPTOGRAPHY_DEFAULT?=	legacy
 .  endif
+# Possible values: 2.7, 3.8, 3.9, 3.10, 3.11
+PYTHON_DEFAULT?=	3.9
+# Possible values: 2.7
+PYTHON2_DEFAULT?=	2.7
+# Possible values: 3.8, 3.9, 3.10, 3.11
+PYTHON3_DEFAULT?=	3.9
 # Possible values: 3.0, 3.1, 3.2, 3.3
 RUBY_DEFAULT?=		3.1
 # Possible values: rust, rust-nightly
